<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MemoryFreak</string>
    <string name="lmkSetTxt">Low Memory Killer Settings:</string>
    <string name="zramBtnTxt">ZRAM Main Control</string>
    <string name="zramSeekTxt">ZRAM Size:</string>
    <string name="divider">_____________________________________________________</string>
    <string name="swapHeaderTxt">Swapiness:</string>
    <string name="kErrTxt">OOPS!!!!</string>
    <string name="perfString">   Performance &lt;--------------------------&gt; Multitasking</string>
    <string name="perfResetBtnTxt">Reset To Talon Default</string>
    <string name="version">1.23b</string>
    <string name="helpBtnTxt">Help / Tips</string>
    <string name="drpCacheBtnTxt">Drop Caches</string>
    <string name="clrZrambtnTxt">Clear ZRAM</string>
</resources>
